--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,6 @@
   <meta name="description" content="" />
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <h1>CHange to push to github</h1>
 </body>
 </html>
